Bug 404072 - Can't join a channel named #
Summary: Can't join a channel named #
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Simonsson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-07 21:48 UTC by me
Modified: 2021-01-23 10:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description me 2019-02-07 21:48:37 UTC
SUMMARY

Using the menus or the /join command to join a channel named # which is as far as I know legal in the protocol, or at least, normally possible with other tools.

Instead Konversation joins a channel called ##

STEPS TO REPRODUCE
1. Start Konversation
2. Connect to a server
3. type '/j #'

OBSERVED RESULT

Joined a channel named ##

EXPECTED RESULT

Join a channel named #

SOFTWARE/OS VERSIONS
Windows: n/a
MacOS: n/a
Linux/KDE Plasma: Kubuntu 18.10
(available in About System)
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 argonel 2019-02-07 22:03:04 UTC
What network are you using that has a channel named only #?
Comment 2 me 2019-02-07 23:04:32 UTC
(In reply to Eli MacKenzie from comment #1)
> What network are you using that has a channel named only #?

EFNet is one example. Some networks restrict that name though.
Comment 3 argonel 2019-02-07 23:52:04 UTC
Unfortunately the original specification is fairly sloppy. My reading says that if the channel name were truly optional it'd be [ <chstring> ] in RFC1459. RFC2812 isn't any better.

If you want to get into such a channel you can do it like this: "/quote join #", but other misbehavior may result.

(note: reset to the general component because its a UI issue, once in the channel the prefix only channel name seems tolerated.)
Comment 4 me 2019-02-11 10:31:33 UTC
(In reply to Eli MacKenzie from comment #3)
> ...
> If you want to get into such a channel you can do it like this: "/quote join
> #", but other misbehavior may result.
> ...

Thank you for the suggested workaround, but it didn't work for me.

Instead I got the response:

> [10:26] [Raw] '/quote join #'
> [10:26] [Error] '/QUOTE: Unknown command

In the meantime, I've had to switch to an alternative IRC client.
Comment 5 me 2019-02-11 10:33:48 UTC
(In reply to me from comment #4)
> (In reply to Eli MacKenzie from comment #3)
> > ...
> > If you want to get into such a channel you can do it like this: "/quote join
> > #", but other misbehavior may result.
> > ...
> 
> Thank you for the suggested workaround, but it didn't work for me.
> 
> Instead I got the response:
> 
> > [10:26] [Raw] '/quote join #'
> > [10:26] [Error] '/QUOTE: Unknown command
> 
> In the meantime, I've had to switch to an alternative IRC client.

Doh - without quotes, it's fine. :) Thank you.
Comment 6 me 2019-02-11 10:36:40 UTC
Having said that, I am able to "join the channel", but other misbehaviour is apparent. The client thinks I've joined that channel, but I do not see messages, topic or members in the list (as show by `/list`)
Comment 7 Bug Janitor Service 2021-01-03 17:13:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konversation/-/merge_requests/44
Comment 8 Peter Simonsson 2021-01-23 10:45:34 UTC
Git commit 3633027026f128ea688d30314552b0f176cdc41d by Peter Simonsson.
Committed on 21/01/2021 at 12:22.
Pushed by psn into branch 'master'.

Consider # a valid channel name

There's channels out there that has a name consisting of the channel
prefix alone so let's consider them valid.

M  +1    -1    src/irc/server.cpp

https://invent.kde.org/network/konversation/commit/3633027026f128ea688d30314552b0f176cdc41d