Consider # a valid channel name

There's channels out there that has a name consisting of the channel
prefix alone so let's consider them valid.

BUG: 404072